Bug 233399 - Fallback charset encoding not respected
Summary: Fallback charset encoding not respected
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: messagelist (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: LO normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: akonadi-ports-regression
Depends on:
Blocks: 223438
  Show dependency treegraph
 
Reported: 2010-04-05 19:30 UTC by Thomas McGuire
Modified: 2010-06-07 19:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas McGuire 2010-04-05 19:30:22 UTC
Mails that have a subject that are not correctly encoded are not displayed correctly, despite setting a fallback charset encoding in KMail's config.

Example: I have a mail with the following subject:
Subject: Eingangsbestätigung Ihrer Bestellung

This is clearly invalid, as it is not RFC2047-encoded. For such cases, KMail has the option to specify a fallback encoding, which I set to ISO 8859-15.
The message list does not respect that fallback encoding and displays an ugly "?" in place of the "ä".

Such invalid mails are quite common.
Comment 1 Thomas McGuire 2010-04-05 19:31:09 UTC
Same bug in the messageviewer, btw.
The fallback config option should be shared between those two.
Comment 2 Leo Franchi 2010-06-07 19:31:42 UTC
SVN commit 1135591 by lfranchi:

Use fallback encoding when parsing headers.

BUG: 233399


 M  +1 -0      kmkernel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1135591