Use fallback encoding when parsing headers.

BUG: 233399

svn path=/trunk/KDE/kdepim/kmail/; revision=1135591